@@ -1,59 +1,56 @@
 package Number3;
 
-import java.util.ArrayList;
-
+import java.util.LinkedList;
 import java.util.concurrent.Semaphore;
 
 public class Buffer <FoodItem> {
 
-    private ArrayList<FoodItem> buffer;
+    private LinkedList<FoodItem> buffer;
 
     private static MaxLimits maxLimits = new MaxLimits(100,100,100);
 
 
-    private int capacity;
-    private Semaphore MUTEX;
-    private Semaphore counterSpotLeftProd;
-    private Semaphore CONSUMER;
+    private Semaphore MUTEX = new Semaphore(1,true);
+    private Semaphore counterSpotLeftProd = new Semaphore(0,true);
+    private Semaphore howMany = new Semaphore(maxLimits.getMaxItems(),true);
 
+    public Buffer () {
 
+        buffer = new LinkedList<>();
 
-    public Buffer (int capacity) {
-
-        buffer = new ArrayList<FoodItem>();
-
-        MUTEX = new Semaphore(1);
-        counterSpotLeftProd = new Semaphore(maxLimits.getMaxItems(),true);
-        CONSUMER = new Semaphore(0);
+        //MUTEX = new Semaphore(1,true);
+        //CONSUMER = new Semaphore(0,true);
+        //counterSpotLeftProd = new Semaphore(maxLimits.getMaxItems(),true);
     }
-
     public int bufferSize() {
         return buffer.size();
     }
-
     public void putItemToBuffer(FoodItem foodItem) throws InterruptedException {
-        counterSpotLeftProd.acquire();
+
         try{
+            howMany.release();
+            counterSpotLeftProd.acquire();
+
             MUTEX.acquire();
+            System.out.println(foodItem);
             buffer.add(foodItem);
-
-        } finally {
             MUTEX.release();
+
+
+        } catch(Exception e)  {
+            e.printStackTrace();
         }
-        CONSUMER.release();
     }
-    public FoodItem takeItemOutOfBuffer() throws InterruptedException {
+    public FoodItem takeItemOutOfBuffer() {
         FoodItem fooditem = null;
-
         try{
-
-            CONSUMER.acquire();
+            howMany.acquire();
             counterSpotLeftProd.release();
 
             MUTEX.acquire();
-
-            fooditem = buffer.remove(0);
+            fooditem = buffer.removeFirst();
             MUTEX.release();
+
         } catch (Exception e) {
             e.printStackTrace();
         }
